# face_mix

./: .gitignore  CMakeLists.txt  active_transfer  active_transfer.cpp  avg_face  avg_face_happy.txt  avg_face_neutral.txt  delaunay.txt  dwt  faceAverage.cpp  face_contour_triangle.txt  face_morph.cpp  face_morph_ex.cpp  generate_standard_face  generate_standard_face.cpp  morph_video.cpp  neutral_face  readme.md  show_delaunay.cpp  static_transfer  static_transfer.cpp  ted_cruz.jpg.txt  track_test.cpp  w_neutraltriangle.txt  w_shouttriangle.txt  warp_to_happy  warp_to_happy.cpp  wavelet_sample  wavelet_sample.cpp  write_delaunay.cpp
jpg/: aragakitriangle.txt  close-eyetriangle.txt  face_div.txt  happytriangle.txt  hillary_clintontriangle.txt  lintriangle.txt  mona.jpg.txt  monalisatriangle.txt  neutraltriangle.txt  sadtriangle.txt  source-angrytriangle.txt  source-happytriangle.txt  source-neutraltriangle.txt  surprisedtriangle.txt  ted_cruz.jpg.txt  ted_cruztriangle.txt  wagner.jpg.txt  wangtriangle.txt
photos/: monalisa_triangle.txt  w_happy.txt  w_neutral.txt
src/: delaunay.cpp  delaunay.hpp  dwt.cpp  dwt.hpp  hist.cpp  hist.hpp  transfer.cpp  transfer.hpp  utils.cpp  utils.hpp  wavelet.cpp  wavelet.hpp
